qualia_derive/tests/compile-fail/only-supported-field-types.stderr
error: fields in ObjectShape must be simple types (usually i64 or String)
  --> tests/compile-fail/only-supported-field-types.rs:14:8
   |
14 |     b: &'a str,
   |        ^^^^^^^

error: object_id field of OptionShape must be Option<i64>
  --> tests/compile-fail/only-supported-field-types.rs:20:16
   |
20 |     object_id: i64,
   |                ^^^

error[E0277]: the trait bound `f64: ObjectShapeWithId` is not satisfied
 --> tests/compile-fail/only-supported-field-types.rs:7:8
  |
7 |     b: f64,
  |        ^^^ the trait `ObjectShapeWithId` is not implemented for `f64`
  |
note: required by a bound in `assert_impl`
 --> tests/compile-fail/only-supported-field-types.rs:4:10
  |
4 | #[derive(ObjectShape)]
  |          ^^^^^^^^^^^ required by this bound in `assert_impl`
  = note: this error originates in the derive macro `ObjectShape` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `q` found for type `f64` in the current scope
 --> tests/compile-fail/only-supported-field-types.rs:4:10
  |
4 | #[derive(ObjectShape)]
  |          ^^^^^^^^^^^ function or associated item not found in `f64`
  |
  = note: this error originates in the derive macro `ObjectShape` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f64: ObjectShapePlain` is not satisfied
   --> tests/compile-fail/only-supported-field-types.rs:4:10
    |
4   | #[derive(ObjectShape)]
    |          ^^^^^^^^^^^ the trait `ObjectShapePlain` is not implemented for `f64`
    |
note: required by a bound in `Collection::<'a>::one_as`
   --> $WORKSPACE/src/store.rs
    |
    |     pub fn one_as<T: ObjectShapePlain + 'a>(&self) -> Result<T> {
    |                      ^^^^^^^^^^^^^^^^ required by this bound in `Collection::<'a>::one_as`
    = note: this error originates in the derive macro `ObjectShape` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `get_object_id` found for type `f64` in the current scope
 --> tests/compile-fail/only-supported-field-types.rs:4:10
  |
4 | #[derive(ObjectShape)]
  |          ^^^^^^^^^^^ method not found in `f64`
  |
  = note: this error originates in the derive macro `ObjectShape` (in Nightly builds, run with -Z macro-backtrace for more info)
